<resources>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="previous">Previous</string>
    <string name="copy_right">Copyright © 2011–2012 TUI Solutions</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="help">help</string>
    <string name="returnstr">Return</string>
    <string name="open">Open</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="anti_theft">TUI Security</string>
    <string name="activated">Activated</string>
    <string name="activate">Activate</string>
    <string name="setup_guide_step">Step</string>
    <string name="setup_guide_setpin">Setup your PIN code</string>
    <string name="setup_guide_setpin_again">Your PIN code again</string>
    <string name="setup_guide_pin_hint">Input your PIN</string>
    <string name="setup_guide_hint">Input your number</string>
    <string name="setup_guide_pin_hint_again">Input your PIN again</string>
    <string name="setup_guide_hint_again">Input number again</string>
    <string name="setup_guide_pwd_forget_question">(*)Password Reset Questions:</string>
    <string name="setup_guide_pwd_forget_ans">(*)Password Reset Answer:</string>
    <string name="setup_guide_pwd_ans_hint">Your Answer</string>
    <string name="setup_guide_helper_p11">You can unlock your device with this password or by providing the correct answer to the password reset question.</string>
    <string name="setup_guide_helper_p12">The password you choose here is also needed for:</string>
    <string name="setup_guide_helper_p13">- Opening AntithePhone Findergs</string>
    <string name="setup_guide_helper_p14">- Sending remote commands from other phones</string>
    <string name="setup_guide_helper_p21">"Specify your friend phone number to receive the SMS alert when your lost phone is changed status (SIM-Turn ON/OFF)"</string>
    <string name="setup_guide_helper_p22">Input phone number</string>
    <string name="setup_guide_helper_p23">Input phone number</string>
    <string name="setup_guide_helper_p24">Edit the SMS alert message:</string>
    <string name="setup_guide_helper_p25">"This is &lt;First Name> &lt;Surname>. My phone might have been stolen – you received this alert because somebody has replaced it's SIM card."</string>
    <string name="setup_guide_helper_p31">Application set up successful</string>
    <string name="setup_guide_helper_p32"><b>TUI Security password:</b> Set</string>
    <string name="setup_guide_helper_p33">Buddy number:</string>
    <string name="setup_guide_helper_p34"><b>Send SMS on SIM card change:</b> On</string>
    <string name="main_pager_activate_tip"><font color="#ff0000">Activate TUI Security to help you make this device is safe and find it easily if it gets lost or stolen</font></string>
    <string name="main_pager_activated_tip"><font color="#ff0000">Your phone is protected!!</font></string>
    <string name="demo_activity_basic_features_introduction">Basic Features – Introduction</string>
    <string name="demo_phone_spying_introduction">Remote Control – Introduction</string>
    <string name="demo_activity_remote_device_lock_info">Remote Device is disabled by default. Please enable it in TUI Security Settings.</string>
    <string name="demo_activity_basic_features_action">"Send the text message to your lose phone from your friend's phone. This will do something to make your information safe from the thieves."</string>
    <string name="feature_urgent_case">Backup &amp; Format Phone with Urgent Case</string>
    <string name="feature_delete_contact">Backup &amp; Wipe Contact</string>
    <string name="feature_delete_message">Backup &amp; Wipe Message</string>
    <string name="feature_delete_account">Delete Account (Google, Facebook)</string>
    <string name="feature_delete_media">Format SD Card</string>
    <string name="feature_auto_lock">Auto Lock Phone with PIN</string>
    <string name="demo_features">Active this and you can:</string>
    <string name="setup_guide_helper_p35"><b>Remote Device Wipe:</b>" OFF
(Enabling this feature in "<b>TUI Security settings</b> will allow you to erase all your personal data if your device is lost or stolen)</string>
    <string name="setup_guide_helper_p36"><b>Remote Capture:</b>" OFF
(Enabling this feature in "<b>TUI Security settings</b> will allow you to remotely take photos from your lost or stolen device and receive them at your email)</string>
    <string name="feature_phone_basic_feature">Basic Features</string>
    <string name="feature_phone_alert">Phone Alert</string>
    <string name="feature_phone_anti_thief">Anti Theft</string>
    <string name="feature_phone_finding">Phone Finding</string>
    <string name="feature_phone_control">Remote Control</string>
    <string name="feature_phone_web_service">Web Remote</string>
    <string name="app_name">TUI Security</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_activity">Activity</string>
    <string name="title_activity_main">TUI Security</string>
    <string name="preferences_basic">Basic</string>
    <string name="preference_phone_factory_reset_enabled_title">Phone factory reset</string>
    <string name="preference_phone_factory_reset_enabled_summary">Factory reset your phone.</string>
    <string name="preference_sdcard_format_enabled_title">Format SD Card</string>
    <string name="preference_sdcard_format_enabled_summary">Format SD Card.</string>
    <string name="preference_delete_contact_enabled_title">Delete Contact</string>
    <string name="preference_delete_contact_enabled_summary">Delete Contact</string>
    <string name="preference_delete_sms_enabled_title">Delete SMS</string>
    <string name="preference_delete_sms_enabled_summary">Delete SMS</string>
    <string name="blocking_app_running_action_text">Blocking Notification Options</string>
    <string name="blocking_app_running_action_summary">Define what to do when a notification comes in while a blocking app is running.</string>
    <string name="preference_hide_unknown_contact_name_title">Hide Unknown Contact Name</string>
    <string name="preference_hide_unknown_contact_name_summary">Hide the contact name if it is unknown.</string>
    <string name="preference_disable_context_menu_title">Disable Context Menu</string>
    <string name="preference_disable_context_menu_summary">Disable the context menu that is attached to notification headers.</string>
    <string name="preference_disable_quick_contact_title">Disable Photo Menu</string>
    <string name="preference_disable_quick_contact_summary">Disable the quick contact menu that is attached to notification photos.</string>
    <string name="reschedule_category">RESCHEDULE</string>
    <string name="preference_display_reschedule_button_title">Display Reschedule Button</string>
    <string name="preference_display_reschedule_button_summary">Display the reschedule button in the header.</string>
    <string name="reschedule_settings">Reschedule Settings</string>
    <string name="reminders_category">REMINDERS</string>
    <string name="preference_reminders_enabled_title">Enable Reminders</string>
    <string name="preference_reminders_enabled_summary">Remind you of unread notifications.</string>
    <string name="preference_event_reminder_settings">Event Settings</string>
    <string name="quiet_time_category">QUIET TIME</string>
    <string name="preference_quiet_time_enabled_title">Enable Quiet Time</string>
    <string name="preference_quiet_time_enabled_summary">Stop notifications during certain time periods.</string>
    <string name="quiet_time_settings">Quiet Time Settings</string>
    <string name="quick_reply_category">QUICK REPLY</string>
    <string name="quick_reply_settings">Quick Reply Settings</string>
    <string name="customize_contacts_category">CUSTOMIZE CONTACTS</string>
    <string name="customize_contacts">Customize Contacts</string>
    <string name="blacklist_category">BLACKLIST</string>
    <string name="blacklist">Blacklist</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="reschedule_notification_text">Reschedule Notification</string>
    <string name="ignore_notification_text">Ignore Notification</string>
    <string name="show_notification_text">Show Notification</string>
    <string name="see_demo">See Demo</string>
    <string name="locate_demo_title">Remote Locate – Introduction</string>
    <string name="locate_demo_command_tips">"Send the following text message to your phone from your friend's phone:\nYour phone will reply with a Google Maps link of its current location."</string>
    <string name="anti_theft_demo">TUI Security Demo:</string>
    <string name="remote_locate">Remote Locate</string>
    <string name="sim_change_alerts">SIM Change Alerts</string>
    <string name="sound_an_alarm">Sound An Alarm</string>
    <string name="remote_device_lock">Remote Device Lock</string>
    <string name="remote_wipe">Remote Device Wipe</string>
    <string name="sound_an_alarm_title">Sound an Alarm – Introduction</string>
    <string name="sim_change_alerts_tips">"If somebody changes the SIM card on your missing phone then CAT will automatically send an SMS alert to your buddy's phone. 

As the SMS will be from your phones 'new' number, you can send locate, lock, wipe and alarm commands to it to protect your device."</string>
    <string name="sound_an_alarm_tips">"Text/SMS is send to your device:\nThe missing device will sound aloud in a long times even if it is in silent mode."</string>
    <string name="remote_anti_thief_tips">"Active this feature: \nYour phone will be alarm when has interaction (after power was pressed)."</string>
    <string name="continuestr">Continue</string>
    <string name="tuisecurityfirstguidetitle1">TUI Security allows you to backup and wipe, lock your device and you can remotely locate if it lost.  Most feaures are activated by text messaging a special command to your missing device.</string>
    <string name="antitheftsettingguidecontent1e"><b> - Backup &amp; Wipe:</b> Backup/wipe your contact, message, your applications data (Maps, Youtube, Facebook, Yahoo) and format SD card. Then send this backup file to your email address.</string>
    <string name="command_urgent">Urgent Command for Lost Phone</string>
    <string name="pager_command_urgent_title">Urgent Command</string>
    <string name="pager_command_basic_title">Basic Command</string>
    <string name="pager_command_backup_restore_title">Backup &amp; Restore Directly</string>
    <string name="pager_command_backup_title">Backup</string>
    <string name="pager_command_restore_title">Restore</string>
    <string name="pager_command_remote_control_title">Remote Control Command</string>
    <string name="about_title">About</string>
    <string name="about_introduction">This application was built for university graduation thesis.\nIt supports the user manager device, protect data, anti-theft, and extract information to support criminal investigations. </string>
    <string name="about_members">Team members</string>
    <string name="about_team_member_1">Vinh Thanh Nguyen -- 08520618</string>
    <string name="about_team_member_2">Thuong Van Le -- 08520599</string>
    <string name="about_thankyou">Thank you for use this application.\nAll information suggestion please contact us at the address: nguyenthanhvinh.uit@gmail.com or thuongle.it@gmail.com</string>
</resources>