<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/navigator"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="1"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/menu_help"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/menu_help"/>
            <item
                android:id="@+id/menu_about"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/menu_about"/>
        </menu>
    </item>
    <!--
    <item
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_share"/>
    <item
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/app_name"/>
    -->

</menu>